--- a/pom.xml
+++ b/pom.xml
@@ -10,29 +10,37 @@
     <packaging>war</packaging>
     <name>Simpletour-Ctrip-Gateway-Server</name>
 
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <simpletour.common.version>1.1-SNAPSHOT</simpletour.common.version>
         <spring.version>4.2.2.RELEASE</spring.version>
-        <aspectjweaver.version>1.8.7</aspectjweaver.version>
-        <druid.version>1.0.12</druid.version>
-        <servlet.version>3.1.0</servlet.version>
-        <derby.version>10.12.1.1</derby.version>
-        <hibernate-validator.version>5.2.2.Final</hibernate-validator.version>
-        <thymeleaf-spring4>2.1.4.RELEASE</thymeleaf-spring4>
         <simpletour.resources.version>1.0-SNAPSHOT</simpletour.resources.version>
     </properties>
 
     <dependencies>
         <!-- 这里作为装配组件的依赖定义，只需要定义各组件service的依赖 -->
-        <!--组件依赖-->
+        <!-- rest -->
+        <dependency>
+            <groupId>com.simpletour</groupId>
+            <artifactId>simpletour-product-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.simpletour</groupId>
             <artifactId>simpletour-company-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--组件依赖end-->
-
+        <dependency>
+            <groupId>com.simpletour.common</groupId>
+            <artifactId>common-restful</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.simpletour</groupId>
+            <artifactId>simpletour-user-interceptor</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.simpletour</groupId>
             <artifactId>simpletour-resources-domain</artifactId>
@@ -44,16 +52,31 @@
             <version>${simpletour.resources.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.simpletour</groupId>
-            <artifactId>simpletour-transport-service</artifactId>
-            <version>${simpletour.resources.version}</version>
-        </dependency>
-
-        <!--spring-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.glassfish.jersey.ext</groupId>
+            <artifactId>jersey-spring3</artifactId>
+            <version>2.22.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-web</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-beans</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-aop</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-context</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -61,56 +84,44 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <scope>test</scope>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>${aspectjweaver.version}</version>
-        </dependency>
-        <!--spring end-->
-
-        <!--other-->
-        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>${druid.version}</version>
+            <version>1.0.12</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet.version}</version>
+            <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <!--<dependency>-->
+        <!--<groupId>javax.servlet</groupId>-->
+        <!--<artifactId>servlet-api</artifactId>-->
+        <!--<version>2.5</version>-->
+        <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.apache.tomcat</groupId>-->
+        <!--<artifactId>tomcat-servlet-api</artifactId>-->
+        <!--<version>7.0.47</version>-->
+        <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.mortbay.jetty</groupId>-->
+        <!--<artifactId>servlet-api</artifactId>-->
+        <!--<version>3.0.20100224</version>-->
+        <!--<scope>provided</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>${derby.version}</version>
+            <version>10.12.1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>${hibernate-validator.version}</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.10</version>
         </dependency>
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf-spring4</artifactId>
-            <version>${thymeleaf-spring4}</version>
-        </dependency>
-        <!--other end-->
     </dependencies>
 
     <build>
