初次提交代码

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,7 +2,7 @@ db.jdbcURL=jdbc:postgresql://127.0.0.1:5432/postgres
 #db.jdbcURL=jdbc:mysql://localhost:3306/test?useUnicode=true&amp;characterEncoding=utf8
 #db.jdbcURL=jdbc:derby:memory:exampleDB;create=true
 db.username=postgres
-db.password=fejjsong
+db.password=1234
 db.driver=org.postgresql.Driver
 #db.driver=com.mysql.jdbc.Driver
 #db.driver=org.apache.derby.jdbc.EmbeddedDriver
