--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <simpletour.common.version>1.1-SNAPSHOT</simpletour.common.version>
         <spring.version>4.2.2.RELEASE</spring.version>
+        <simpletour.product.version>1.0-SNAPSHOT</simpletour.product.version>
         <simpletour.resources.version>1.0-SNAPSHOT</simpletour.resources.version>
+        <simpletour.order.version>1.0-SNAPSHOT</simpletour.order.version>
+        <simpletour.sms.version>1.0-SNAPSHOT</simpletour.sms.version>
+        <simpletour.user.version>1.0-SNAPSHOT</simpletour.user.version>
+        <simpletour.transport.version>1.0-SNAPSHOT</simpletour.transport.version>
     </properties>
 
     <dependencies>
@@ -24,7 +29,7 @@
         <dependency>
             <groupId>com.simpletour</groupId>
             <artifactId>simpletour-product-service</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${simpletour.product.version}</version>
         </dependency>
         <dependency>
             <groupId>com.simpletour.common</groupId>
@@ -46,6 +51,27 @@
             <artifactId>simpletour-resources-service</artifactId>
             <version>${simpletour.resources.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.simpletour</groupId>
+            <artifactId>simpletour-order-service</artifactId>
+            <version>${simpletour.order.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.simpletour</groupId>
+            <artifactId>simpletour-sms-service</artifactId>
+            <version>${simpletour.sms.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.simpletour</groupId>
+            <artifactId>simpletour-user-service</artifactId>
+            <version>${simpletour.user.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.simpletour</groupId>
+            <artifactId>simpletour-transport-service</artifactId>
+            <version>${simpletour.transport.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.glassfish.jersey.ext</groupId>
             <artifactId>jersey-spring3</artifactId>
@@ -89,33 +115,10 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>javax.servlet</groupId>-->
-        <!--<artifactId>servlet-api</artifactId>-->
-        <!--<version>2.5</version>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.apache.tomcat</groupId>-->
-        <!--<artifactId>tomcat-servlet-api</artifactId>-->
-        <!--<version>7.0.47</version>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.mortbay.jetty</groupId>-->
-        <!--<artifactId>servlet-api</artifactId>-->
-        <!--<version>3.0.20100224</version>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
             <version>10.12.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.10</version>
         </dependency>
     </dependencies>
 
