修改携程对接接口

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.jdbcURL=jdbc:postgresql://192.168.2.109:5432/simpletour_20160202
+db.jdbcURL=jdbc:postgresql://192.168.2.109:5432/simpletour_stptest
 db.username=postgres
 db.password=postgres123456
 db.driver=org.postgresql.Driver
