--- a/src/main/resources/callbackurl.properties
+++ b/src/main/resources/callbackurl.properties
@@ -1,2 +1,2 @@
-xiecheng.callback.cancelOrder = http://piao.uat.ctripqa.com/Thingstodo-Vendor-VendorConnectService/orderapi/orderhandler.ashx
-xiecheng.callback.consumeOrder = http://piao.uat.ctripqa.com/Thingstodo-Vendor-VendorConnectService/orderapi/orderhandler.ashx
+xiecheng.callback.cancelOrder = http://piao.ctrip.com/Thingstodo-Vendor-VendorConnectService/orderapi/orderhandler.ashx
+xiecheng.callback.consumeOrder = http://piao.ctrip.com/Thingstodo-Vendor-VendorConnectService/orderapi/orderhandler.ashx
