修改携程对接接口 1.分支上创建携程车票接口 包含：校验订单、创建订单、根据id查询订单、根据日期查询订单列表、查询车次接口

--- a/overlays/test/db.properties
+++ b/overlays/test/db.properties
@@ -1,8 +1,4 @@
-db.jdbcURL=jdbc:postgresql://192.168.2.109:5432/simpletour
-#db.jdbcURL=jdbc:mysql://localhost:3306/test?useUnicode=true&amp;characterEncoding=utf8
-#db.jdbcURL=jdbc:derby:memory:exampleDB;create=true
+db.jdbcURL=jdbc:postgresql://10.251.212.142:5432/simpletour_admin_web
 db.username=simpletour
-db.password=simpletour123456
+db.password=YiGoRNVOApLinNua
 db.driver=org.postgresql.Driver
-#db.driver=com.mysql.jdbc.Driver
-#db.driver=org.apache.derby.jdbc.EmbeddedDriver
