--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,8 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <version>2.6</version>
                 <executions>  <!--执行器 mvn assembly:assembly-->
                     <execution>
                         <id>go-assembly</id>
