--- a/src/main/resources/signkey.properties
+++ b/src/main/resources/signkey.properties
@@ -1,1 +1,2 @@
-xiecheng.signkey = 9C1012E99067AA970A972103B2CD3D0C
+xiecheng.mp.signkey = 9C1012E99067AA970A972103B2CD3D0C
+xiecheng.cp.signkey = 9C1012E99067AA970A972103B2CD3D0C
