修改携程对接接口 signkey....

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,9 +1,9 @@
-db.jdbcURL=jdbc:postgresql://192.168.2.109:5432/simpletour_stptest
-db.username=postgres
-db.password=postgres123456
-db.driver=org.postgresql.Driver
-
-#db.jdbcURL=jdbc:postgresql://123.57.190.249:5432/simpletour_admin_web
-#db.username=simpletour
-#db.password=YiGoRNVOApLinNua
+#db.jdbcURL=jdbc:postgresql://192.168.2.109:5432/simpletour_stptest
+#db.username=postgres
+#db.password=postgres123456
 #db.driver=org.postgresql.Driver
+
+db.jdbcURL=jdbc:postgresql://123.57.190.249:5432/simpletour_admin_web
+db.username=simpletour
+db.password=YiGoRNVOApLinNua
+db.driver=org.postgresql.Driver
